src/_content-inner.less
@import "_variables.less";

font-size: @font-size-post;

.media(sm, {
  line-height: 1.625;
});

// setup vertical rhythm with `* + *` method
@{reset-selector} {
  margin: 0;

  + @{reset-selector} {
    margin-top: 1.5em;
  }
  + :is(h1, h2, h3, h4, h5, h6) {
    margin-top: 2.5em;
  }
  + :is(dt, li) {
    margin-top: 0.5em;
  }
}

// pull centered table layouts from newsletter feeds to the left
> [align="center"] {
  margin-left: 0;
}
:is(blockquote, dl, iframe, img, ol, pre, table, ul, video) {
  box-sizing: border-box;
  max-width: 100%;
}
:is(blockquote, dl, figcaption, h1, h2, h3, h4, h5, h6, ol, p, ul) {
  .reading-width();
}
:is(h1, h2, h3, h4, h5, h6) {
  -webkit-font-smoothing: antialiased;
  font-weight: bold;
  text-rendering: optimizeLegibility;
}
each(range(6), {
  h@{value} {
    .heading-font-size(@level: @value);
  }
});
:is(ul, ol) {
  padding-left: 0; // no padding if no li is nested

  li {
    margin-left: 2.5em; // instead of ul/ol padding, add a margin here
    padding: 0; // reset tt-rss default style

    // remove margin and marker if it's the only item (e. g. Ars Technica slideshow images are rendered like this)
    &:only-child {
      margin: 0;
      list-style: none;
    }
  }
}
dd {
  margin: 0 0 0 2.5em;
}
table {
  border-collapse: collapse;

  :is(th, td) {
    padding: 0 0.5em;
    border-width: 1px;
    border-style: solid;
  }
  // layout tables
  &[border="0"] {
    :is(th, td) {
      padding: 0;
      border: none; // tables nested in layout tables should also be layout tables, so explicitly remove the border

      + * {
        padding-left: 0.5em;
      }
    }
    table {
      width: 100%; // fix nested tables used for layout
    }
  }
}
[bgcolor] {
  background-color: transparent; // some layout tables set bgcolor, so reset it
}
:is(iframe, img, video) {
  display: block;
}
// `img` in `a` or other inline elements should get more margin-top because inline elements don't apply it
img {
  margin: 1.5em 1em 0.5em 0; // margin-right/-bottom to add space for floating/left-aligned media
}
// ... but not in blockquotes, figures and table-cells, and not when it's the first element
&,
:where(blockquote, figure, td, th) {
  > img:first-child {
    margin-top: 0.5em;
  }
  // nested :first-child selector, e. g. for layout tables
  each(range(5), {
    .repeat('> :first-child', @value, {
      @{result} > img:first-child {
        margin-top: 0.5em;
      }
    });
  });
}
figure {
  > * ~ figcaption ~ *, // fix p/div incorrectly nested inside figcaption breaking out
  > img + p:last-child, // fix incorrectly using p instead of figcaption
  figcaption {
    margin-top: 0.5em;
    font-size: 0.875em;
    font-style: italic;
    line-height: 1.357;
  }
  figcaption:first-child {
    margin-top: 0;

    + * {
      margin-top: 0.5em;
    }
  }
}
:is(pre, code) {
  font-family: @fonts-mono;
  font-size: 0.875em;
  line-height: 1.357;
}
pre {
  padding: 0.5em;
  overflow: auto;
  white-space: pre-wrap;
}
code {
  padding: 0 0.15em !important;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;

  &.hljs {
    color: unset !important;
  }
}
pre code {
  padding: 0 !important;
  border: none;
  background-color: transparent;
  font-size: 1em;
}
:is(blockquote, q) {
  font-style: italic;
}
blockquote {
  padding: 0.5em 1em;
}
@empty-selector: ~":not(area, br, col, embed, hr, iframe, img, input, link, td, th, track, video, wbr, .dijit *):empty";
@{empty-selector},
@{empty-selector} + br,
:is(br + br, hr, div, article, blockquote, figure, figcaption, section, table) + br {
  display: none;
}

